--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preload" fetchpriority="high" as="image" href="src/assets/img/header-background1.webp" type="image/webp">
+    <link rel="prefetch" fetchpriority="high" as="image" href="src/assets/img/header-background1.webp" type="image/webp">
     <link rel="preconnect" href="https://yandex.ru/">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
